[gd_scene load_steps=3 format=2]

[ext_resource path="res://Materialo.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 20.0

[node name="Materialo" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 2
collision_mask = 3
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="Aspekto" type="Polygon2D" parent="." index="0"]

polygon = PoolVector2Array( -14, -14, -18, -8, -20, 0, -18, 8, -14, 14, -8, 18, 0, 20, 8, 18, 14, 14, 18, 8, 20, 0, 18, -8, 14, -14, 8, -18, 0, -20, -8, -18 )
uv = PoolVector2Array(  )
color = Color( 0, 0, 0, 1 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = false
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0
_sections_unfolded = [ "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

visible = false
shape = SubResource( 1 )

[node name="Kasxi" type="Tween" parent="." index="2"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="area_entered" from="." to="." method="_on_Materialo_area_enter"]

[connection signal="body_entered" from="." to="." method="_on_Materialo_body_enter"]

[connection signal="tween_completed" from="Kasxi" to="." method="_on_Kasxi_tween_complete"]


